Small Changes to Index, and Resume Added

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 							<article class="post featured">
 								<header class="major">
 									<h2><a href="#">Hi, i'm Ethan Machado</a></h2>
-									<p>I am a student at CSU Stanislaus studying computer science and
+									<p>I am a student at California State University Stanislaus studying computer science and
 										economics as a double major. I am currently 
-										interested in internship opportunities that will help me gain hands-on 
-										technical experience. <br> <br> Down below are some of the projects I have 
-										made.</p>
+										interested in internship opportunities that will help me gain hands-on, 
+										technical experience in the Information Technology field.<br> 
+										<br> Down below are some of the projects I have made.</p>
 								</header>
 								<a href="#" class="image main"><img src="images\ProjectLimekistPortfolioPic2.jpg" alt="Project Limekist Image" /></a>
 								<ul class="actions special">
@@ -70,12 +70,14 @@
 									</header>
 									<a href="#" class="image fit"><img src="images\INVTSPortfolioPic.jpg" alt="Inventory Image" /></a>
 									<p>An inventory tracking system built using Java. The system can track, add, and remove 
-										inventory. Myself and two other collaborators worked together on this project. A project 
+										inventory. I worked with two other collaborators on this project. A project 
 										presentation was given by us to our course instructor detailing its features and the development 
-										process. A full project report can be downloaded by clicking on the "Project Report" button below. 
+										process. A link to the project's GitHub repository can be accessed by clicking on the "Check it Out" button below. 
+										A full project report can be downloaded by clicking on the "Project Report" button below. 
 									</p>
 									<ul class="actions special">
 										<li><a href="Inventory Tracking System Report.docx" class="button">Project Report</a></li>
+										<li><a href="https://github.com/ethanmachado/InventoryTrackingSystem" class="button">Check it Out</a></li>
 									</ul>
 								</article>
 								<article>
@@ -85,8 +87,10 @@
 									</header>
 									<a href="#" class="image fit"><img src="images\CalculatorPortfolioPic2.jpg" alt="Calculator Image" /></a>
 									<p>A Reverse Polish Notation Calculator created using Java. It leverages a Stack data structure 
-										to create a calculator that is capable of executing quick calculations. A link to the project's  
-										GitHub repository can be accessed by clicking on the "Check it Out" button below.
+										to create a calculator that is capable of executing quick calculations. This calculator program 
+										does not have to abide by the common paranthesis notation that most calculators need to function
+										properly. A link to the project's  
+										GitHub repository can be accessed by clicking on the "Check it Out" button below. 
 										A project description can be downloaded by clicking on the "Project Description" button below. 
 									</p>
 									<ul class="actions special">
@@ -100,10 +104,10 @@
 										<h2><a href="#">What-To-Charger Forecasting Model</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images\ChargerPortfolioPic.jpg" alt="Dodge Charger Picture" /></a>
-									<p>A OLS linear regression forecasting model created to forecast the sale price of 1966-1971 Dodge Chargers 
+									<p>An OLS linear regression forecasting model created to forecast the sale price of 1966-1971 Dodge Chargers 
 										if they were to be posted on an eBay auction. This model generates a "sale price," but this "sale price" can be 
 										used as an approximate value of a car. I created this model to help "Muscle Car Era" Dodge Charger owners
-										put a value to their cars. Download a detailed report below.
+										put a value to their cars. A full project report can be downloaded by clicking on the "Project Report" button below.
 									</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Project Report</a></li>
@@ -118,10 +122,10 @@
 									<p>An example data anlysis report that I completed in my econometrics course. It features linear regression to 
 										determine the causal effect of smoking on birthweight. Multiple regression outputs are recorded in the 
 										report. Statistical methods are used to determine the statistical significance of smoking as a determinant 
-										of birthweight. Download the full report below. 
+										of birthweight. A full project report can be downloaded by clicking on the "Project Report" button below. 
 									</p>
 									<ul class="actions special">
-										<li><a href="Ethan Machado - Quantitative Analytics Example Problem.docx" class="button">Full Report</a></li>
+										<li><a href="Ethan Machado - Quantitative Analytics Example Problem.docx" class="button">Project Report</a></li>
 									</ul>
 								</article>
 								<article>
@@ -144,11 +148,12 @@
 									<a href="#" class="image fit"><img src="images\ContactPortfolioPic.jpg" alt="Contact Image" /></a>
 									<li><a href="https://www.linkedin.com/in/ethan-machado-8545111b1">LinkedIn</a></li>
 									<li><a href="https://github.com/ethanmachado">GitHub</a></li>
-									<li>Email: e.machado15@icloud.com </li>
-									<li>Email (school): emachado2@csustan.edu </li>
-									<li>Resume (download below) <br></li>
+									<p><li>Email: e.machado15@icloud.com </li>
+									<li>Email (school): emachado2@csustan.edu </li></p>
+									<p><li>Resume (download below) <br></li></p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Resume</a></li>
+										<li><a href="02-2022 Resume Ethan Machado PDF Final.pdf" class="button">Resume PDF Version</a></li>
+										<li><a href="02-2022 Resume Ethan Machado.docx" class="button">Resume DOCX Version</a></li>
 									</ul>
 								</article>
 							</section>
