Fix WhatToCharger Button Issue and Added Resumes

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 										put a value to their cars. A full project report can be downloaded by clicking on the "Project Report" button below.
 									</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Project Report</a></li>
+										<li><a href="Ethan Machado - WhatToCharger Model 02-04-2022.docx" class="button">Project Report</a></li>
 									</ul>
 								</article>
 								<article>
