Added new resumes & fixed links

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 										technical experience in the Information Technology field.<br> 
 										<br> Down below are some of the projects I have made.</p>
 								</header>
-								<a href="#" class="image main"><img src="images\ProjectLimekistPortfolioPic2.jpg" alt="Project Limekist Image" /></a>
+								<a href="https://ethanmachado.github.io/ProjectLimekist/" class="image main"><img src="images\ProjectLimekistPortfolioPic2.jpg" alt="Project Limekist Image" /></a>
 								<ul class="actions special">
-									<li><a href="https://ethanmachado.github.io/index.html" class="button large">Check out the website I made</a></li>
+									<li><a href="https://ethanmachado.github.io/ProjectLimekist/" class="button large">Check out the website I made</a></li>
 								</ul>
 							</article>
 
@@ -66,7 +66,7 @@
 								<article>
 									<header>
 										<span class="date"></span>
-										<h2><a href="#">Inventory tracking <br> system<br/></a></h2>
+										<h2><a href="https://github.com/ethanmachado/InventoryTrackingSystem">Inventory tracking <br> system<br/></a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images\INVTSPortfolioPic.jpg" alt="Inventory Image" /></a>
 									<p>An inventory tracking system built using Java. The system can track, add, and remove 
@@ -83,7 +83,7 @@
 								<article>
 									<header>
 										<span class="date"></span>
-										<h2><a href="#">Reverse Polish Notation Calculator</a></h2>
+										<h2><a href="https://github.com/ethanmachado/RPNCalc">Reverse Polish Notation Calculator</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images\CalculatorPortfolioPic2.jpg" alt="Calculator Image" /></a>
 									<p>A Reverse Polish Notation Calculator created using Java. It leverages a Stack data structure 
@@ -101,7 +101,7 @@
 								<article>
 									<header>
 										<span class="date"></span>
-										<h2><a href="#">What-To-Charger Forecasting Model</a></h2>
+										<h2><a href="Ethan Machado - WhatToCharger Model 02-04-2022.docx">What-To-Charger Forecasting Model</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images\ChargerPortfolioPic.jpg" alt="Dodge Charger Picture" /></a>
 									<p>An OLS linear regression forecasting model created to forecast the sale price of 1966-1971 Dodge Chargers 
@@ -116,7 +116,7 @@
 								<article>
 									<header>
 										<span class="date"></span>
-										<h2><a href="#">Data Analysis Example Report</h2>
+										<h2><a href="Ethan Machado - Quantitative Analytics Example Problem.docx">Data Analysis Example Report</h2>
 									</header>
 									<a href="#" class="image fit"><img src="images\DataAnalysisPortfolioPic.jpg" alt="Data Analysis Image" /></a>
 									<p>An example data anlysis report that I completed in my econometrics course. It features linear regression to 
@@ -152,8 +152,8 @@
 									<li>Email (school): emachado2@csustan.edu </li></p>
 									<p><li>Resume (download below) <br></li></p>
 									<ul class="actions special">
-										<li><a href="02-2022 Resume Ethan Machado PDF Final.pdf" class="button">Resume PDF Version</a></li>
-										<li><a href="02-2022 Resume Ethan Machado.docx" class="button">Resume DOCX Version</a></li>
+										<li><a href="EthanMachadoResume2-27.pdf" class="button">Resume PDF Version</a></li>
+										<li><a href="EthanMachadoResume2-27.docx" class="button">Resume DOCX Version</a></li>
 									</ul>
 								</article>
 							</section>
