--- a/index.html
+++ b/index.html
@@ -135,8 +135,7 @@
 									</header>
 									<a href="#" class="image fit"><img src="images\EthanPortfolioPic.png" alt="A Picture of Myself" /></a>
 									<p>I am a computer science and economics double major at Stanislaus State with a minor in cybersecurity. 
-										I am a member of the computer science and economics clubs at CSU Stanislaus. My interests are software engineering,
-										web development, data analysis, and web development.  </p>
+										I am a member of the computer science and economics clubs at CSU Stanislaus. My interests are software engineering, data analysis, and web development.  </p>
 									<ul class="actions special">
 										
 									</ul>
