Update Resume and Resume Button

--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
 									<li>Email (school): emachado2@csustan.edu </li></p>
 									<p><li>Resume (download below) <br></li></p>
 									<ul class="actions special">
-										<li><a href="EthanMachadoResume2-27.pdf" class="button">Resume PDF Version</a></li>
-										<li><a href="EthanMachadoResume2-27.docx" class="button">Resume DOCX Version</a></li>
+										<li><a href="ResumeEthanMachado.docx" class="button">Resume</a></li>
+										<!-- <li><a href="EthanMachadoResume2-27.docx" class="button">Resume DOCX Version</a></li> -->
 									</ul>
 								</article>
 							</section>
