Update Headshot Photo

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 									<header>
 										<h2><a href="#">Accounts, Contact Information, and Resume</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images\ContactPortfolioPic.jpg" alt="Contact Image" /></a>
+									<a href="#" class="image fit"><img src="images\headshot1.jpg" alt="Contact Image" /></a>
 									<li><a href="https://www.linkedin.com/in/ethan-machado-8545111b1">LinkedIn</a></li>
 									<li><a href="https://github.com/ethanmachado">GitHub</a></li>
 									<p><li>Email: e.machado15@icloud.com </li>
