--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 										<span class="date"></span>
 										<h2><a href="#">About Me</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images\EthanPortfolioPic.png" alt="A Picture of Myself" /></a>
+									<a href="#" class="image fit"><img src="images\headshot1.jpg" alt="A Picture of Myself" /></a>
 									<p>I am a computer science and economics double major at Stanislaus State with a minor in cybersecurity. 
 										I am a member of the computer science and economics clubs at CSU Stanislaus. My interests are software engineering, data analysis, and web development.  </p>
 									<ul class="actions special">
@@ -144,7 +144,7 @@
 									<header>
 										<h2><a href="#">Accounts, Contact Information, and Resume</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images\headshot1.jpg" alt="Contact Image" /></a>
+									<a href="#" class="image fit"><img src="images\ContactPortfolioPic.jpg" alt="Contact Image" /></a>
 									<li><a href="https://www.linkedin.com/in/ethan-machado-8545111b1">LinkedIn</a></li>
 									<li><a href="https://github.com/ethanmachado">GitHub</a></li>
 									<p><li>Email: e.machado15@icloud.com </li>
